# rain.metadata

./: .gas-snapshot  .gitignore  .prettierignore  .soldeerignore  CLAUDE.md  Cargo.toml  README.md  REUSE.toml  flake.nix  foundry.toml  slither.config.json
.github/workflows/: copy-artifacts.yaml  deploy-subgraph.yaml  manual-rs-release.yml  manual-sol-artifacts.yml  manual-subgraph-deploy.yml  package-release.yaml  rainix-rs.yaml  rainix.yaml  subgraph-test.yaml
crates/bindings/: Cargo.toml
crates/bindings/abi/: IDescribedByMetaV1.json  MetaBoard.json
crates/bindings/src/: lib.rs
crates/cli/: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs  metaboard.rs
crates/cli/src/cli/: build.rs  generate.rs  mod.rs  schema_check.rs
crates/cli/src/error/: mod.rs
crates/cli/src/meta/: magic.rs  mod.rs  unpacked.rs
crates/cli/src/meta/query/: schema.json
crates/cli/src/meta/types/: mod.rs
crates/cli/src/meta/types/authoring/: v1.rs  v2.rs
crates/cli/src/meta/types/common/: v1.rs
crates/cli/src/meta/types/dotrain/: gui_state_v1.rs  instance_v1.rs  mod.rs  order_builder_state_v1.rs  source_v1.rs
crates/cli/src/meta/types/interpreter_caller/: v1.rs
crates/cli/src/meta/types/op/: v1.rs
crates/cli/src/meta/types/raindex_signed_context_oracle/: mod.rs
crates/cli/src/meta/types/signed_context_oracle/: mod.rs
crates/cli/src/meta/types/solidity_abi/: v2.rs
crates/metaboard/: Cargo.toml
crates/metaboard/src/: metaboard_client.rs
crates/metaboard/src/schema/: metaboard.graphql
crates/metaboard/src/types/: metas.rs
script/: CopyArtifacts.sol  Deploy.sol
script/lib/: LibCopyArtifacts.sol
src/concrete/: MetaBoard.sol
src/interface/deprecated/: IMetaV1.sol
src/interface/unstable/: IMetaV1_2.sol
src/lib/: LibDescribedByMeta.sol  LibMeta.sol
src/lib/deploy/: LibMetaBoardDeploy.sol
subgraph/: networks.json  schema.graphql  subgraph.yaml
subgraph/src/: metaBoard.ts
subgraph/tests/: address.ts  metaBoard.test.ts  utils.ts
test/concrete/: MetaBoard.hash.t.sol  MetaBoard.t.sol
test/lib/: LibDescribedByMeta.emitForDescribedAddress.t.sol  LibMeta.checkMetaHashedV1_2.t.sol  LibMeta.checkMetaUnhashedV1_2.t.sol  LibMeta.isRainMetaV1_2.t.sol  TestDescribedByMetaV1.sol
test/lib/deploy/: LibMetaBoardDeploy.t.sol
test/script/: CopyArtifacts.t.sol
