[package]
name = "rain-metadata"
version = "0.0.2-alpha.6"
edition = "2021"
description = "Tooling and utilities for RainLanguage metadata."
license = "LicenseRef-DCL-1.0"
repository = "https://github.com/rainlanguage/rain.metadata"

[features]
default = ["cli"]
cli = [
  "json-schema",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:clap",
  "dep:tokio",
]
json-schema = ["dep:schemars"]
tokio-full = ["cli", "tokio/full"]

[dependencies]
regex = "1.10.2"
anyhow = "1.0.75"
futures = "0.3.29"
once_cell = "1.18.0"
strum = { version = "0.24", features = ["derive"] }
serde = "1.0.192"
serde_json = "1.0.108"
itertools = "0.10.5"
serde_bytes = "0.11.12"
deflate = "1.0.0"
inflate = "0.4.5"
serde_cbor = "0.11.2"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
alloy = { version = "1.0.9", features = ["rand", "json", "json-abi"] }
graphql_client = "0.13.0"
graphql-parser = "0.4"
rain-metaboard-subgraph = { path = "../metaboard" }
rain-metadata-bindings = { path = "../bindings" }
thiserror = "1.0.56"
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "f7b5bfd0687f16c77dbfdd4905b2434793fa7885" }
url = "2.5.0"
rain-erc = { git = "https://github.com/rainlanguage/rain.erc", rev = "7b0f382f5e0788b0173c2391e09f4411f1c38300" }

# json-schema
schemars = { version = "0.8.12", optional = true }

# cli
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
clap = { version = "4.4.8", features = ["cargo", "derive"], optional = true }
tokio = { version = "1.34.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils = { git = "https://github.com/rainlanguage/rain.wasm", rev = "06990d85a0b7c55378a1c8cca4dd9e2bc34a596a" }
wasm-bindgen = "0.2.100"

[dev-dependencies]
httpmock = "0.7.0"
tempfile = "3.8.0"

[[bin]]
name = "rain-metadata"
path = "src/main.rs"
required-features = ["cli"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "warn"

[package.metadata.docs.rs]
all-features = true
