[package]
name = "rain-metaboard-subgraph"
version = "0.1.0"
edition = "2021"
description = "A subgraph client for the Rain Metaboard."
license = "LicenseRef-DCL-1.0"
repository = "https://github.com/rainlanguage/rain.metadata"

[dependencies]
cynic = { version = "3" }
reqwest = { version = "0.11.17", features = ["json"] }
thiserror = "1.0.56"
alloy = { version = "1.0.9", features = ["rand", "json", "json-abi"] }
async-trait = "0.1.77"

[dev-dependencies]
httpmock = "0.7.0"
insta = "1.34.0"
tokio = { version = "1.28.0", features = ["full"] }
serde_json = "1.0.108"

[build-dependencies]
cynic-codegen = { version = "3" }
